overlays/signoz/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: signoz-otel-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`otel.int.mvaldes.dev`) && PathPrefix(`/v1/metrics`)
      services:
        - name: signoz-signoz-helm-otel-collector
          port: 4318
    - kind: Rule
      match: Host(`otel.int.mvaldes.dev`) && PathPrefix(`/v1/logs`)
      services:
        - name: signoz-signoz-helm-otel-collector
          port: 4318
    - kind: Rule
      match: Host(`otel.int.mvaldes.dev`) && PathPrefix(`/v1/traces`)
      services:
        - name: signoz-signoz-helm-otel-collector
          port: 4318
